--- a/Rancangan Interface/Bendahara BEM - Data Iuran.html
+++ b/Rancangan Interface/Bendahara BEM - Data Iuran.html
@@ -39,7 +39,7 @@
                         <th style="width:100px;text-align:center;">No</th>
                         <th style="width:200px;text-align:center;">Kelas</th>
                         <th style="width:200px;text-align:center;">Jumlah Iuran</th>
-                        <th style="width:300px;text-align:center;">Kelunasan</th>
+                        <th style="width:300px;text-align:center;">Status</th>
                         <th style="width:300px;text-align:center;">Keterangan</th>
                     </tr>
                 </thead>
@@ -75,7 +75,7 @@
                         <th style="width:100px;text-align:center;">No</th>
                         <th style="width:200px;text-align:center;">Kelas</th>
                         <th style="width:200px;text-align:center;">Jumlah Iuran</th>
-                        <th style="width:300px;text-align:center;">Kelunasan</th>
+                        <th style="width:300px;text-align:center;">Status</th>
                         <th style="width:300px;text-align:center;">Keterangan</th>
                     </tr>
                 </thead>
